# volaris

./: .gitignore  404.html  CHANGELOG.md  LICENSE  LICENSE-text.html  LICENSE-text.md  README.md  authors.html  authors.md  extra.css  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  utils.md
articles/: index.html  index.md  installation.html  installation.md  notebooks.html  notebooks.md  notebooks_py.html  notebooks_py.md  notebooks_r.html  notebooks_r.md
benchmarks/: python_bench.py  r_bench.R
notebooks/: 01_black_scholes.ipynb  01_black_scholes_r.ipynb  02_implied_volatility_surface.ipynb  03_monte_carlo_pricing.ipynb
python/: pyproject.toml  setup.py
python/tests/: conftest.py  test_numerical.py  test_pricing.py  test_simulation.py  test_volatility.py
python/volaris/: __init__.py  _core.c  _core.cp312-win_amd64.pyd  _core.pyx  _heston_garch.cpp  _heston_garch.pyx
reference/: Volaris-package.html  Volaris-package.md  binomial_price.html  binomial_price.md  bs_delta.html  bs_delta.md  bs_gamma.html  bs_gamma.md  bs_price.html  bs_price.md  bs_rho.html  bs_rho.md  bs_theta.html  bs_theta.md  bs_vega.html  bs_vega.md  garch_fit.html  garch_fit.md  garch_forecast.html  garch_forecast.md  garch_variances.html  garch_variances.md  gbm_paths.html  gbm_paths.md  gbm_paths_antithetic.html  gbm_paths_antithetic.md  heston_price.html  heston_price.md  implied_vol.html  implied_vol.md  index.html  index.md  integrate_gauss.html  integrate_gauss.md  integrate_gsl.html  integrate_gsl.md  mc_price_asian.html  mc_price_asian.md  mc_price_barrier.html  (+19 more)
(+97 files in other folders)
