[project]
name = "volaris"
description = "Fast derivatives pricing, volatility estimation, stochastic simulation, and numerical computation through a compiled C/C++ backend."
version = "1.0.0"
authors = [{ name="Barbara Gawlik", email="basia.m.gawlik@gmail.com" }]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"